# oh-my-customcode

./: .coderabbit.yaml  .gitignore  .mcp.json  .npmignore  .omcustom.lock.json  ARCHITECTURE.md  ARCHITECTURE_ko.md  ARCHIVE_NOTICE.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  LICENSE  README.md  README_ko.md  TODO-ROADMAP.md  TODO.md  biome.json  conftest.py  package-lock.json  package.json  release_notes.md  sync.sh  tsconfig.json
.claude/: TODO.md  ci-status.json.template  settings.json  settings.local.json  statusline.sh
.claude/agents/: arch-documenter.md  (+43 more)
.github/: CODEOWNERS  FUNDING.yml  PULL_REQUEST_TEMPLATE.md  dependabot.yml
.husky/: pre-commit
docs/: index.md
guides/: index.yaml
rust/: Cargo.toml  README.md
rust/cli-native/: Cargo.toml
rust/cli-native/benches/: cli_bench.rs
rust/cli-native/src/: error.rs  file_tree_scanner.rs  lib.rs  lockfile_hasher.rs  scope_filter.rs
scripts/: backfill_changelog.py  setup-hooks.sh  sync-core.ts  sync-source-lockfile.ts  sync-wiki.sh  sync.sh.example  verify-sync.sh  verify-version-sync.sh
src/: index.ts
templates/: AGENTS.md.en  AGENTS.md.ko  CLAUDE.md  CLAUDE.md.en  CLAUDE.md.ko  README.md  deprecated-files.json  index.yaml  manifest.codex.json  manifest.json
wiki/: .source-hashes.json  Agents.md  Built-in-Commands.md  CLI-Reference.md  Contributing.md  Customization.md  Development.md  Guides.md  Home.md  Project-Structure.md  Quick-Start.md  Rules.md  Skills.md  Sub-Agent-Model.md  _Footer.md  _Sidebar.md  index.yaml  log.jsonl
workflows/: auto-dev.yaml  eraser.yaml  omcustom-dev.yaml
(+1170 files in other folders)
