[package]
name = "cli-native"
version = "0.1.0"
edition = "2021"
description = "CLI-native Rust module for oh-my-customcode: scope filtering, lockfile hashing, file tree scanning"
license = "MIT"

[lib]
name = "cli_native"
crate-type = ["lib"]

[[bench]]
name = "cli_bench"
harness = false

[dependencies]
sha2 = "0.10"
walkdir = "2"
thiserror = "2"

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }
tempfile = "3"
